--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.29.0",
         "sass-loader": "^8.0.2"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.0.2",
+        "postcss": "^8.1.10",
+        "tailwindcss": "^2.0.1"
     }
 }
