--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.29.0",
-        "sass-loader": "^8.0.2"
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "autoprefixer": "^10.0.2",
+        "laravel-mix-tailwind": "^0.1.1",
         "postcss": "^8.1.10",
         "tailwindcss": "^2.0.1"
     }
