perf(mail): switched to markdown for emails

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@tailwindcss/custom-forms": "^0.2.1",
         "autoprefixer": "^10.0.2",
         "laravel-mix-tailwind": "^0.1.1",
         "postcss": "^8.1.10",
