--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "wood_master",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Wood master laravel template",
     "keywords": [
         "framework",
         "laravel"
@@ -13,8 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/framework": "^8.12"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
@@ -22,7 +21,8 @@
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "laravel/tinker": "^2.5"
     },
     "config": {
         "optimize-autoloader": true,
