--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "cross-env": "^7.0",
+        "laravel-mix": "^5.0.1",
+        "lodash": "^4.17.19",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.29.0",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "@tailwindcss/custom-forms": "^0.2.1",
         "autoprefixer": "^10.0.2",
-        "jquery": "^3.5.1",
         "laravel-mix-tailwind": "^0.1.1",
         "postcss": "^8.1.10",
         "tailwindcss": "^2.0.1"
