--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,19 @@
 {
-    "name": "fcws/woodmaster",
-    "type": "project",
-    "description": "Wood master laravel template",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "google/apiclient": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12"
+        "php": "^7.4",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/tinker": "^2.5",
+        "laravel/framework": "^8.12",
+        "phased/phase": "^0.4.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
+        "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1",
+        "mockery/mockery": "^1.4.2",
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
