--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "require": {
-        "php": "^7.4",
+        "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "laravel/tinker": "^2.5",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "phased/phase": "^0.4.0"
+        "phased/phase": "^0.4.0",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
