--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,8 @@
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
-    ],    "env": {
+    ],
+    "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://ip-alibaev.vercel.app",
