--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
         "vue-router": "^3.3.4",
         "vue-server-renderer": "^2.6.11",
         "vuex": "^3.4.0"
-    }
+    },
+    "version": "0.7.0"
 }
