--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Ip_Alibaev
 APP_ENV=local
 APP_KEY=base64:mvm0TTBTvi7CTJd/Uz+3rEv+R5jn7FiVF7VBQqA+G5E=
 APP_DEBUG=true
@@ -8,12 +8,14 @@ DUSK_DRIVER_URL=http://localhost:8000
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=:memory:
-#DB_USERNAME=root
-#DB_PASSWORD=SecureSql⁇
+DB_DATABASE=ip_alibaev_dusk
+DB_USERNAME=root
+DB_PASSWORD=SecureSql⁇
+
 
 BROADCARIVER=log
 CACHE_DRIVER=file
@@ -28,10 +30,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=b88d7dee0afe57
+MAIL_PASSWORD=5d6c4c87217d90
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=azamatalifullstack@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
