--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 
 {
     "version": 2,
-    "functions": [
+    "builds": [
         { "src": "/api/index.php", "use": "vercel-php@0.3.1" },
-        { "src": "/public/**", "use": "@vercel/static" }
+        { "src": "/public/**", "use": "@vercel/static" },
+        { "src":  "yarn", "use":  "prod"}
     ],
     "routes": [
         {
