--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "version": 2,
     "builds": [
         { "src": "/api/index.php", "use": "vercel-php@0.3.1" },
-        { "src": "/public/**", "use": "@vercel/static" },
-        { "src":  "yarn", "use":  "prod"}
+        { "src": "/public/**", "use": "@vercel/static" }
     ],
     "routes": [
         {
