--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "private": true,
     "version": "0.7.4",
     "scripts": {
-        "dev": "yarn development",
+        "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "yarn development -- --watch",
-        "watch-poll": "yarn watch -- --watch-poll",
+        "watch": "npm run development -- --watch",
+        "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --host 0.0.0.0 --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "yarn production",
+        "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
