--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "version": 2,
     "builds": [
         { "src": "/api/index.php", "use": "vercel-php@0.3.1" },
-        { "src": "/public/**", "use": "@vercel/static" }
+        { "src": "/public/**", "use": "@vercel/static" },
+        { "src":  "package.json", "use":  "yarn prod"}
     ],
     "routes": [
         {
