--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /storage/*.key
 /vendor
 .env
-.env.dusk.local
+.env.*.local
 .env.backup
 .phpunit.result.cache
 Homestead.json
@@ -14,6 +14,4 @@ yarn-error.log
 /.idea/workspace.xml
 /.idea
 /.idea/*
-/public/css/tailwind.css
-/public/css/vanilla.css
 .vercel
