--- a/vercel.json
+++ b/vercel.json
@@ -7,18 +7,20 @@
     ],
     "routes": [
         {
-            "src": "/(css|js|images)/(.*)",
+            "src": "/(css|js)/(.*)",
             "dest": "public/$1/$2"
         },
         {
             "src": "/(.*)",
+            "methods": ["POST", "GET"],
             "dest": "/api/index.php"
         }
     ],
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_URL": "https://ip-alibaev.vercel.app",
+        "APP_DEBUG": "false",
+        "VERCEL_DEMO_MODE": "true",
+        "APP_URL": "https://stolyaroff.vercel.app",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -27,6 +29,7 @@
 
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
+        "SESSION_LIFETIME": "1000",
         "SESSION_DRIVER": "array",
         "VIEW_COMPILED_PATH": "/tmp",
         "SSR_TEMP_PATH": "/tmp/ssr",
