--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.2|^7.3|^7.4|^8.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.0",
-        "phased/phase": "^0.4.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
