--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "scripts": {
         "dev": "yarn development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "yarn development -- --watch",
-        "watch-poll": "yarn watch -- --watch-poll",
+        "watch": "yarn development --watch",
+        "watch-poll": "yarn watch --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --host 0.0.0.0 --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "yarn production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
@@ -15,6 +15,7 @@
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.9",
         "lodash": "^4.17.19",
+        "mix-tailwindcss": "^1.3.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.26.9",
         "sass-loader": "^8.0.0",
