--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/vanilla.css": "/css/vanilla.css",
-    "/css/tailwind.css": "/css/tailwind.css",
-    "/js/jquery.min.js": "/js/jquery.min.js"
+    "/css/tailwind.css": "/css/tailwind.css"
 }
