--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "laravel/framework": "^8.12",
         "laravel/horizon": "^5.6",
         "laravel/tinker": "^2.0",
+        "livewire/livewire": "^2.3",
         "predis/predis": "^1.1"
     },
     "require-dev": {
