--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "cypress": "^6.5.0",
         "laravel-mix": "^5.0.9",
         "lodash": "^4.17.19",
         "mix-tailwindcss": "^1.3.0",
